fix alignmet

--- a/ui/pageviews/bookings/create/createBookingPageView.module.scss
+++ b/ui/pageviews/bookings/create/createBookingPageView.module.scss
@@ -1,9 +1,5 @@
 .omotac {
 	display: flex;
+	align-items: center;
 	// max-height: 200px;
-}
-
-.pic {
-	display: block;
-	overflow: hidden;
 }
